# Snack-Robot

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: industrial-ci.yml
src/control_hardware/: CMakeLists.txt  control_hardware.xml  package.xml
src/control_hardware/config/: controller_manager.yaml  sim_controller_manager.yaml
src/control_hardware/include/control_hardware/: DM542_Stepper_ActuatorHardware.hpp  visibility_control.h
src/control_hardware/launch/: classic_sim_basic_telemetry.launch.py  diff_drive_test.launch.py  ignition_sim_basic_telemetry.launch.py  sim_basic_telemetry.launch.py
src/control_hardware/src/control_hardware/: DM542_Stepper_ActuatorHardware.cpp
src/control_hardware/urdf/: classic_ros2_control.xacro  ignition_ros2_control.xacro  real_ros2_control.xacro  real_snack_robot.xacro  robot_model_export.xacro  ros2_control.xacro  sim_snack_robot.xacro
src/robot_model_export_description/: package.xml  setup.cfg  setup.py
src/robot_model_export_description/launch/: display.launch.py  gazebo.launch.py
src/robot_model_export_description/meshes/: Buck_Converter_1.stl  Front_Wheel_Ball_1.stl  IMU_1.stl  Left_Motor_1.stl  Left_Wheel_1.stl  Left_Wheel_Attachment_1.stl  Level_Sticks_1.stl  LiPo_Battery_1.stl  Lidar_Attachments_1.stl  Motor_Driver_1.stl  Motor_Driver_2.stl  Motor_Driver_Holders_1.stl  Motor_Driver_Holders_2.stl  Power_Distribution_Board_1.stl  Right_Motor_Mirror___1__1.stl  Right_Wheel_Attachment_Mirror__1.stl  Right_Wheel_Mirror__1.stl  Rpi_Power_Cable_1.stl  Upper_Decker_1.stl  base_link.stl
src/robot_model_export_description/urdf/: materials.xacro  robot_model_export.gazebo  robot_model_export.trans  robot_model_export.xacro
